[workspace]
members = [
    "examples/*",
    "winfsp_wrs_build",
    "winfsp_wrs",
    "winfsp_wrs_sys",
]
resolver = "2"

# Define values to be inherited by workspace members.
#
# For a member to inherit a value, it need to set `{key}.workspace = true`.
#
# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-package-table
[workspace.package]
authors = [ "@Scille/parsec-dev", "@Scille/rust-code-owners" ]
edition = "2021"
license = "MIT"
version = "0.4.0"
description = "WinFSP wrapper for rust"
repository = "https://github.com/Scille/winfsp_wrs"
keywords = [
    "filesystem",
    "mountpoint",
    "windows",
    "winfsp",
]
categories = [
    "external-ffi-bindings",
    "filesystem",
    "os::windows-apis",
]

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
