[package]
name = "winfsp_build"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Scille/winfsp_wrs"
keywords = [
    "filesystem",
    "fuse",
    "mountpoint",
    "windows",
    "winfsp",
]
categories = [
    "filesystem",
    "mountpoint",
    "os::windows-api"
]
description = "Helper to allow delayload for WinFSP's dll"
license = "MIT OR Apache-2.0"
