[package]
name = "winfsp_wrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
default = []
debug = []

[build-dependencies]
bindgen = "0.65.1"
registry = { version = "1.2.3" }

[dependencies]
chrono = "0.4.26"
widestring = "1.0.2"

[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
]