[package]
name = "winfsp_wrs"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/Scille/winfsp_wrs"
keywords = [
    "filesystem",
    "fuse",
    "mountpoint",
    "windows",
    "winfsp",
]
categories = [
    "binding",
    "filesystem",
    "mountpoint",
    "os::windows-api"
]
description = "WinFSP wrapper for rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
default = []
debug = []
# Enable `set_icon` for FileSystem to add a custom icon for the mountpoint folder
icon = [
    "windows-sys/Win32_System_IO",
    "windows-sys/Win32_UI_Shell",
]

[build-dependencies]
bindgen = "0.66.1"
registry = { version = "1.2.3" }

[dependencies]
chrono = "0.4.26"
widestring = "1.0.2"

[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
]
