[package]
name = "winfsp_wrs_sys"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[build-dependencies]
registry = { version = "1.2.3" }
